--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # Arquivo .env DEFECTDOJO
 DEFECTDOJO_API_URL=http://localhost:8080/api/v2/products/
 DEFECTDOJO_API_TOKEN=c7ce28b56b64b5366c12bfd03715d4be58c8b61e
+DAST_URL=127.0.0.1:8080
+DAST_API_TOKEN=kzservices_
