--- a/.env
+++ b/.env
@@ -1,5 +1,16 @@
+#Arquivo .env config
+PORT=3000
+
 # Arquivo .env DEFECTDOJO
 DEFECTDOJO_API_URL=http://localhost:8080/api/v2/products/
 DEFECTDOJO_API_TOKEN=c7ce28b56b64b5366c12bfd03715d4be58c8b61e
-DAST_URL=http://localhost:8080
-DAST_API_TOKEN=kzservices_
+
+#Arquivo .env DAST
+ZAPROXY_URL=http://zaproxy:8080
+ZAP_API_KEY=zapscankey
+
+#Arquivo .env MOBILE
+MOBSF_SERVICE_NAME=mobile_scan
+MOBSF_API_PORT=8000
+MOBSF_URL=http://mobsf:8081
+
