Versão com autenticação Token Funcionando

--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ DEFECTDOJO_API_TOKEN=c7ce28b56b64b5366c12bfd03715d4be58c8b61e
 ZAPROXY_URL=http://zaproxy:8080
 ZAP_API_KEY=zapscankey
 
+#Autenticação UI
+TOKEN_UI=HjjdhhjdnDDdeg87623hdggda
+
 #Arquivo .env MOBILE
 MOBSF_SERVICE_NAME=mobile_scan
 MOBSF_API_PORT=8000
