--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   backend:
     build:
+      context: .
       dockerfile: Dockerfile
     container_name: app
     ports:
@@ -18,6 +19,9 @@ services:
     environment:
       - ZAP_PROXY_HOST=zaproxy
       - ZAP_PROXY_PORT=8080
+      - JWT_SECRET=${TOKEN_UI}  # Defina o segredo do JWT aqui
+    env_file:
+      - .env  # Inclua o arquivo .env para que todas as variáveis de ambiente sejam carregadas
 
   zaproxy:
     image: zaproxy/zap-stable
