--- a/.env
+++ b/.env
@@ -1,19 +1,26 @@
-#Arquivo .env config
+# Arquivo .env config
 PORT=3000
 
 # Arquivo .env DEFECTDOJO
 DEFECTDOJO_API_URL=http://localhost:8080/api/v2/products/
 DEFECTDOJO_API_TOKEN=c7ce28b56b64b5366c12bfd03715d4be58c8b61e
 
-#Arquivo .env DAST
+# Arquivo .env DAST
 ZAPROXY_URL=http://zaproxy:8080
 ZAP_API_KEY=zapscankey
 
-#Autenticação UI
+# Autenticação UI
 TOKEN_UI=HjjdhhjdnDDdeg87623hdggda
 
-#Arquivo .env MOBILE
+JWT_SECRET=HjjdhhjdnDDdeg87623hdggda
+
+
+# Arquivo .env MOBILE
 MOBSF_SERVICE_NAME=mobile_scan
 MOBSF_API_PORT=8000
 MOBSF_URL=http://mobsf:8081
 
+# Arquivo .env Mongo
+MONGO_URL=mongodb://root:example@mongo:27017/scanservicesdb?authSource=admin
+MONGO_USER=root
+MONGO_PASSWORD=example
