--- a/.env
+++ b/.env
@@ -1,17 +1,7 @@
 # Arquivo .env config
 PORT=3000
 
-# Arquivo .env DEFECTDOJO
-DEFECTDOJO_API_URL=http://localhost:8080/api/v2/products/
-DEFECTDOJO_API_TOKEN=c7ce28b56b64b5366c12bfd03715d4be58c8b61e
-
-# Arquivo .env DAST
-ZAPROXY_URL=http://zaproxy:8080
-ZAP_API_KEY=zapscankey
-
 # Autenticação UI
-TOKEN_UI=HjjdhhjdnDDdeg87623hdggda
-
 JWT_SECRET=HjjdhhjdnDDdeg87623hdggda
 
 
@@ -24,3 +14,8 @@ MOBSF_URL=http://mobsf:8081
 MONGO_URL=mongodb://root:example@mongo:27017/scanservicesdb?authSource=admin
 MONGO_USER=root
 MONGO_PASSWORD=example
+
+# User Swagger
+SWAGGER_USERNAME=admin
+SWAGGER_LOGIN=admin
+SWAGGER_PASSWORD=admin
